# nav2_voice_system

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: system_config.yaml
nav2_voice_system/: llm_processor.py  map_manager.py  node_a_voice.py  node_b_server.py  test_master_sim.py  wake_word_detector.py
nav2_voice_system/launch/: cango_nuc.launch.py
nav2_voice_system/maps/: nuri.json
