<?xml version="1.0"?>
<package format="3">
  <name>nav2_voice_system</name>
  <version>1.0.0</version>
  <description>Voice navigation system with LLM API</description>
  <maintainer email="kth@example.com">kth</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
